nav bar updates & school info

--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
                                                 <div class="modal-header">
 
                                                     <!--Modal Title-->
-                                                    <h5 class="modal-title" id="artDeadlinesModal">School of Art Deadlines
+                                                    <h5 class="modal-title" id="artDeadlinesModal">School of Art
+                                                        Deadlines
                                                     </h5>
 
                                                     <!--Close Modal button-->
@@ -194,40 +195,41 @@
                                                 <div>
                                                     <table class="table table-hover">
                                                         <thead>
-                                                          <tr>
-                                                            <th scope="col">Degree</th>
-                                                            <th scope="col">First Year</th>
-                                                            <th scope="col">Transfer</th>
-                                                            <th scope="col">Notes</th>
-                                                          </tr>
+                                                            <tr>
+                                                                <th scope="col">Degree</th>
+                                                                <th scope="col">First Year</th>
+                                                                <th scope="col">Transfer</th>
+                                                                <th scope="col">Notes</th>
+                                                            </tr>
                                                         </thead>
                                                         <tbody>
-                                                          <tr>
-                                                            <th scope="row">Art History (BA)</th>
-                                                            <td>June 1, 2022</td>
-                                                            <td>June 1, 2022</td>
-                                                            <td>deadline extended from 5/1</td>
-                                                          </tr>
-                                                          <tr>
-                                                            <th scope="row">Art & Visual Culture Education (BFA)</th>
-                                                            <td>June 1, 2022</td>
-                                                            <td>June 1, 2022</td>
-                                                            <td>deadline extended from 5/1</td>
-                                                          </tr>
-                                                          <tr>
-                                                            <th scope="row">Studio Art (BA)</th>
-                                                            <td>June 1, 2022</td>
-                                                            <td>June 1, 2022</td>
-                                                            <td>deadline extended from 5/1</td>
-                                                          </tr>
-                                                          <tr>
-                                                            <th scope="row">Studio Art (BFA)</th>
-                                                            <td>June 1, 2022</td>
-                                                            <td>June 1, 2022</td>
-                                                            <td>deadline extended from 5/1</td>
-                                                          </tr>
+                                                            <tr>
+                                                                <th scope="row">Art History (BA)</th>
+                                                                <td>June 1, 2022</td>
+                                                                <td>June 1, 2022</td>
+                                                                <td>deadline extended from 5/1</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <th scope="row">Art & Visual Culture Education (BFA)
+                                                                </th>
+                                                                <td>June 1, 2022</td>
+                                                                <td>June 1, 2022</td>
+                                                                <td>deadline extended from 5/1</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <th scope="row">Studio Art (BA)</th>
+                                                                <td>June 1, 2022</td>
+                                                                <td>June 1, 2022</td>
+                                                                <td>deadline extended from 5/1</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <th scope="row">Studio Art (BFA)</th>
+                                                                <td>June 1, 2022</td>
+                                                                <td>June 1, 2022</td>
+                                                                <td>deadline extended from 5/1</td>
+                                                            </tr>
                                                         </tbody>
-                                                      </table>
+                                                    </table>
                                                 </div>
 
                                             </div>
@@ -283,7 +285,8 @@
                                                 <div class="modal-header">
 
                                                     <!--Modal Title-->
-                                                    <h5 class="modal-title" id="danceDeadlinesModal">{School} Deadlines
+                                                    <h5 class="modal-title" id="danceDeadlinesModal">School of Dance
+                                                        Deadlines
                                                     </h5>
 
                                                     <!--Close Modal button-->
@@ -295,7 +298,25 @@
 
                                                 <!--Content Here-->
                                                 <div>
-                                                    <p>Dance placeholder</p>
+                                                    <table class="table table-hover">
+                                                        <thead>
+                                                            <tr>
+                                                                <th scope="col">Degree</th>
+                                                                <th scope="col">First Year</th>
+                                                                <th scope="col">Transfer</th>
+                                                                <th scope="col">Notes</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            <tr>
+                                                                <th scope="row">Dance (BFA)</th>
+                                                                <td>May 1, 2022</td>
+                                                                <td>May 1, 2022</td>
+                                                                <td>National Auditions for Fall 2022 will be Video
+                                                                    Auditions only.</td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
                                                 </div>
 
                                             </div>
