--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Document</title>
 </head>
 
-<body class="d-flex flex-column h-100"> test
+<body class="d-flex flex-column h-100">
 
     <!--Facebook Feed-->
     <div id="fb-root"></div>
@@ -149,7 +149,7 @@
                         <div class="card-body">
 
                             <!--Heading-->
-                            <h3 class="text-uppercase">School of Art</h3>
+                            <h3 class="text-uppercase">School of Art</h3> 
 
                             <!--Description-->
                             <div class="card-text">
